--- a/ios/RNNativeModules/Info.plist
+++ b/ios/RNNativeModules/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSCalendarsFullAccessUsageDescription</key>
+	<string>$(PRODUCT_NAME) needs access to your calendar</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Feather.ttf</string>
