--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
     "react": "18.2.0",
+    "react-hook-form": "^7.50.1",
     "react-native": "0.73.4",
+    "react-native-permissions": "^4.1.2",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
+    "react-native-toast-message": "^2.2.0",
     "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
